# rill-developer

./: .gitignore  Makefile  README.md
docs/blog/: 0.6.md  0.9.md
docs/docs/: README.md  test-page.md
docs/src/components/: Vimeo.js
docs/src/theme/MDXComponents/: A.js
docs/src/theme/MDXComponents/Img/: index.js
proto/rill/admin/v1/: ai.proto  api.proto  telemetry.proto
proto/rill/runtime/v1/: api.proto  connectors.proto  queries.proto
runtime/api/: runtime.pb.go  runtime.proto  runtime.swagger.json
runtime/cmd/: main.go
runtime/drivers/sqlite/: registry.go
runtime/server/: repos.go  server.go
src/common/: constants.ts
src/common/data-modeler-service/: ModelActions.ts
src/lib/components/table/: PreviewTable.svelte  TableCell.svelte
src/lib/util/: humanize-numbers.ts
src/routes/_surfaces/assets/: Footer.svelte  ModelAssets.svelte
src/routes/_surfaces/workspace/: Model.svelte  ModelPreview.svelte
src/routes/_surfaces/workspace/explore/leaderboards/: LeaderboardDisplay.svelte
tui/: Cargo.toml  README.md
tui/tui/: Cargo.toml
tui/tui/src/: config.rs  credentials.rs  main.rs
tui/tui/src/examples/: mod.rs  org_projects.rs
web-local/src/common/database-service/: DuckDBClient.ts
web-local/src/lib/components/layouts/: RillDeveloperApplicationLayout.svelte
