[workspace]
resolver = "2"
members = ["gen/api/admin", "gen/api/runtime", "tui"]

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
anyhow = "1.0.95"
serde_with = { version = "^3.8", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
