[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
admin = { path = "../gen/api/admin" }
runtime = { path = "../gen/api/runtime" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
serde_yaml = "0.9.34"
serde = { workspace = true }
